# memegen

./: Containerfile  Dockerfile  Dockerfile.dev  Procfile.dev  pyproject.toml
app/: __init__.py  embeddings.py  main.py
app/embeddings/: chroma.sqlite3
app/views/: templates.py
scripts/: INSTRUCTIONS.md  check_db.ipynb  process_missing_embeddings.py  search_templates.py  test_scraping.py
templates/aag/: config.yml  config_scraped.yml
templates/ackbar/: config.yml
templates/afraid/: config.yml
templates/agnes/: config.yml
templates/aint-got-time/: config.yml
templates/ams/: config.yml
templates/ants/: config.yml
templates/apcr/: config.yml
templates/astronaut/: config.yml
templates/atis/: config.yml
templates/away/: config.yml
templates/awesome/: config.yml
templates/awesome-awkward/: config.yml
templates/awkward/: config.yml
templates/awkward-awesome/: config.yml
templates/bad/: config.yml
templates/badchoice/: config.yml
templates/balloon/: config.yml
templates/bd/: config.yml
templates/because/: config.yml
templates/bender/: config.yml
templates/bihw/: config.yml
templates/bilbo/: config.yml
templates/biw/: config.yml
templates/blb/: config.yml
templates/boat/: config.yml
templates/bongo/: config.yml
templates/both/: config.yml
templates/box/: config.yml
templates/bs/: config.yml
templates/buzz/: config.yml
templates/cake/: config.yml
templates/captain/: config.yml
templates/captain-america/: config.yml
templates/cb/: config.yml
templates/cbb/: config.yml
templates/cbg/: config.yml
templates/center/: config.yml
templates/ch/: config.yml
templates/chair/: config.yml
templates/cheems/: config.yml
templates/chosen/: config.yml
templates/cmm/: config.yml
templates/country/: config.yml
templates/crazypills/: config.yml
templates/crow/: config.yml
templates/cryingfloor/: config.yml
templates/db/: config.yml
templates/dbg/: config.yml
templates/dg/: config.yml
templates/disastergirl/: config.yml
templates/dodgson/: config.yml
templates/doge/: config.yml
templates/dragon/: config.yml
templates/drake/: config.yml
templates/drowning/: config.yml
templates/drunk/: config.yml
templates/ds/: config.yml
templates/dsm/: config.yml
(+143 files in other folders)
